--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -160,7 +160,7 @@
         </div>
         <div class="col-md-12 align-right padding-top">
             <button type="button" id="btnModifier" class="btn btn-primary">Modifier</button>
-            <button type="button" id="btnSupprimer" class="btn btn-danger" data-toggle="modal" data-target="#confirm-delete">Supprimer</button>
+            <button type="button" id="btnSupprimer" class="btn btn-danger" onclick="showDeleteDialog('Déploiement')">Supprimer</button>
         </div>
     </div>
 
