--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -6,6 +6,7 @@
     <div class="container">
         @Html.ActionLink("Retour à la liste", "Index")
         <br>
+        <div class="col-md-6">
             <h3>Consulter un déploiement</h3>
 
             <div class="value row">
