Fix de la date pour la création / modification de déploiements. Le format dans le datepicker est différent que le format affiché en lecture seul. Utilisation de labels pour les checkbox dans la modification.

--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -168,7 +168,7 @@
 
     $(document).ready(function () {
         $('.input-group.date').datetimepicker({
-            format: 'MM-DD-YYYY HH:mm'
+            format: 'YYYY-MM-DD h:mm'
         }).data("DateTimePicker").date(moment());
 
         $('#Composant_Id').selectize({
