Corriger l'insertion de la date dans la base de donnéespour un deploiement

--- a/STM.GDA.Web/Views/Deploiement/Creer.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Creer.cshtml
@@ -168,7 +168,7 @@
 
     $(document).ready(function () {
         $('.input-group.date').datetimepicker({
-            format: 'YYYY-MM-DD h:mm'
+			format: 'YYYY-MM-DD H:mm'
         }).data("DateTimePicker").date(moment());
 
         $('#Composant_Id').selectize({
