--- a/STM.GDA.Web/Views/Deploiement/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Modifier.cshtml
@@ -22,7 +22,7 @@
                 <div class="col-xs-12 col-sm-9 col-md-8">
                     <div class="form-group">
                         <div class='input-group date'>
-                            @Html.EditorFor(m => m.DateDeploiement, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.EditorFor(m => m.DateDeploiement, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.DateDeploiement } })
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
@@ -168,7 +168,7 @@
 
     $(document).ready(function () {
         $('.input-group.date').datetimepicker({
-            format: 'YYYY-MM-DD h:mm'
+            format: 'YYYY-MM-DD H:mm'
         }).data("DateTimePicker").date();
 
         $('#composants').selectize();
