WIP: Ajouter deux boutons dans la page de deploiement pour Generer le texte descriptif et Ajouter à mon calendrier

--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -141,10 +141,16 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12 align-right padding-top">
-            <button type="button" id="btnModifier" class="btn btn-primary">Modifier</button>
-            <button type="button" id="btnSupprimer" class="btn btn-danger" onclick="showDeleteDialog('Déploiement')">Supprimer</button>
-        </div>
+		<div class="col-md-12 padding-top">
+			<div class="col-md-6 align-left">
+				<button type="button" id="btnGenererTexte" class="btn">Générer le texte descriptif</button>
+				<button type="button" id="btnAjouterCalendrier" class="btn">Ajouter à mon calendrier</button>
+			</div>
+			<div class="col-md-6 align-right">
+				<button type="button" id="btnModifier" class="btn btn-primary">Modifier</button>
+				<button type="button" id="btnSupprimer" class="btn btn-danger" onclick="showDeleteDialog('Déploiement')">Supprimer</button>
+			</div>
+		</div>
     </div>
 
 <script>
