Trier la liste de déploiements par ordre de date

--- a/STM.GDA.Web/Content/Composant.css
+++ b/STM.GDA.Web/Content/Composant.css
@@ -8,6 +8,10 @@ label {
     display: inline-block;
 }
 
+.divComposant.deployed {
+	background: #ECECEC;
+}
+
 .divComposant {
 	background: #fff;
 	color: #007EB6;
