Ajout d'un check lors de l'ajout de nouvelles valeurs dans les multiselects afin d'éviter les doublons. Modification de la classe CSS des boutons dans la vue Déploiement - Détails.

--- a/STM.GDA.Web/Views/Composant/Modifier.cshtml
+++ b/STM.GDA.Web/Views/Composant/Modifier.cshtml
@@ -140,7 +140,9 @@
     $(document).ready(function () {
         $('#ClientsSelectionnes').selectize({
             plugins: ['remove_button'],
-            create: true,
+            create: function (input) {
+                return selectizeAdd(input, 'ClientsSelectionnes');
+            },
             persist: false,
             placeholder: "Sélectionnez un ou plusieurs clients",
             render: {
@@ -152,7 +154,9 @@
 
         $('#ResponsablesSelectionnes').selectize({
             plugins: ['remove_button'],
-            create: true,
+            create: function(input) {
+                return selectizeAdd(input, 'ResponsablesSelectionnes');
+            },
             persist: false,
             placeholder: "Sélectionnez un ou plusieurs responsables",
             render: {
