--- a/STM.GDA.Web/Views/Deploiement/Details.cshtml
+++ b/STM.GDA.Web/Views/Deploiement/Details.cshtml
@@ -143,8 +143,8 @@
         </div>
 		<div class="col-md-12 padding-top">
 			<div class="col-md-6 align-left">
-				<button type="button" id="btnGenererTexte" class="btn">Générer le texte descriptif</button>
-				<button type="button" id="btnAjouterCalendrier" class="btn">Ajouter à mon calendrier</button>
+				<button type="button" id="btnGenererTexte" class="btn btn-default">Générer le texte descriptif</button>
+				<button type="button" id="btnAjouterCalendrier" class="btn btn-default">Ajouter à mon calendrier</button>
 			</div>
 			<div class="col-md-6 align-right">
 				<button type="button" id="btnModifier" class="btn btn-primary">Modifier</button>
